Correction alignement hébergements / renomm. section-hebergements

--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ a:visited
 
 /* ########## main ########## */
 
-#galerie_hebergements
+#section_hebergements
 {
     display: flex;
     justify-content: space-between;
@@ -226,6 +226,7 @@ aside
 article h2
 {
     flex-basis: 100%;
+    margin: 15px 0px;
 }
 
 .carte_hebergement img
@@ -281,7 +282,7 @@ a
     box-shadow: 5px 5px 5px rgb(234,234,234);
     border-radius: 20px;
     background-color: white;
-    margin: 35px 0px;
+    margin: 15px 0px;
     height: 140px;
     width: 340px;
 }
@@ -343,7 +344,7 @@ aside h2
     margin-right: 100px;
 }
 
-#activites
+#section_activites
 {
     margin-top: 70px;
     margin-bottom: 50px;
@@ -456,7 +457,7 @@ footer li
 
 @media (max-width: 1210px) /* populaires passe au dessus d'hébergements */
 {
-    #galerie_hebergements
+    #section_hebergements
     {
         flex-wrap: wrap-reverse;
         justify-content: center;
@@ -596,7 +597,7 @@ footer li
 
 @media (max-width: 720px)
 {
-    #activites
+    #section_activites
     {
         margin-top: 30px;
     }
